<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.kmurugesan.audioon.HomeActivity">

    <TextView android:text="@string/welcome_home_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        
        />

    <Button
        android:text="@string/profile_button_label"
        android:layout_marginTop="40dp"
        android:id="@+id/hprofile_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:text="@string/check_messages_button_label"
        android:layout_marginTop="40dp"
        android:id="@+id/check_messages_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/hprofile_button"
        android:layout_centerHorizontal="true"

        />

    <Button
        android:text="@string/send_messages_button_label"
        android:layout_marginTop="40dp"
        android:id="@+id/send_messages_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/received_messages_button"
        android:layout_centerHorizontal="true"

        />

</RelativeLayout>
