<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/username_button_label"
        android:layout_marginTop="40dp"
        android:id="@+id/username_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        <!--android:layout_below="@+id/password"
        android:background="@drawable/signinbutton"-->

    <Button
        android:text="@string/password_button_label"
        android:layout_marginTop="40dp"
        android:id="@+id/password_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/username_button"/>
    <!--android:background="@drawable/signinbutton"-->



</RelativeLayout>
